--- a/machine_learning_intro.ipynb
+++ b/machine_learning_intro.ipynb
@@ -55,7 +55,24 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       " .container.slides .celltoolbar, .container.slides .hide-in-slideshow {\n",
+       "    display: None ! important;\n",
+       "}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -63,42 +80,6 @@
     "    display: None ! important;\n",
     "}\n",
     "</style>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Artificial Intelligence\n",
-    "  * ## Robotics\n",
-    "      * ### <span style=\"color:blue\">Path Planning (e.g. A*)</span>\n",
-    "      * #### Computer Vision\n",
-    "      ...\n",
-    " \n",
-    "  * ## Machine Learning\n",
-    "    * ### <span style=\"color:blue\">*Esemble Learning*</span>  \n",
-    "    * #### Bayesian Inference\n",
-    "    * #### Reinforcement Learning  \n",
-    "    * #### Generic Algorithms \n",
-    "      ...  \n",
-    "    * ### Artificial Neural Networks\n",
-    "        * #### <span style=\"color:green\">*The Perceptron*</span>\n",
-    "        * #### <span style=\"color:green\">*Feed forward Neural Networks*</span>\n",
-    "        * ##### <span style=\"color:orange\">Deep Learning</span>\n",
-    "            * Convolutional Neural Networks\n",
-    "            * Recurrent Neural Networks\n",
-    "            \n",
-    "              ...\n",
-    "              \n",
-    "          ...\n",
-    "            \n",
-    "<span style=\"color:blue\">■</span> Show quick example  \n",
-    "<span style=\"color:green\">■</span> Main focus  \n",
-    "<span style=\"color:orange\">■</span> Maybe future topic"
    ]
   },
   {
@@ -416,10 +397,10 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"66ceff8a9a08ead5\"></div>\n",
+       "<div id=\"e5a4c1f8fa8b48b8\"></div>\n",
        "    <script type=\"text/javascript\">\n",
        "        $(function(){\n",
-       "            var p = $(\"#66ceff8a9a08ead5\");\n",
+       "            var p = $(\"#e5a4c1f8fa8b48b8\");\n",
        "            if (p.length==0) return;\n",
        "            while (!p.hasClass(\"cell\")) {\n",
        "                p=p.parent();\n",
@@ -513,6 +494,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -521,10 +503,10 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"036f2ae1a809de30\"></div>\n",
+       "<div id=\"ed0d61924dd36733\"></div>\n",
        "    <script type=\"text/javascript\">\n",
        "        $(function(){\n",
-       "            var p = $(\"#036f2ae1a809de30\");\n",
+       "            var p = $(\"#ed0d61924dd36733\");\n",
        "            if (p.length==0) return;\n",
        "            while (!p.hasClass(\"cell\")) {\n",
        "                p=p.parent();\n",
@@ -626,10 +608,10 @@
     {
      "data": {
       "text/html": [
-       "<div id=\"9c5e7b3361ce9a08\"></div>\n",
+       "<div id=\"7ccc3cf9254fc24e\"></div>\n",
        "    <script type=\"text/javascript\">\n",
        "        $(function(){\n",
-       "            var p = $(\"#9c5e7b3361ce9a08\");\n",
+       "            var p = $(\"#7ccc3cf9254fc24e\");\n",
        "            if (p.length==0) return;\n",
        "            while (!p.hasClass(\"cell\")) {\n",
        "                p=p.parent();\n",
